feat: rebuild student management app with Node.js

--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py", // Đường dẫn đến file Flask chính
-      "use": "@vercel/python"
+      "src": "app.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/static/(.*)", // Định tuyến cho file tĩnh
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)", // Tất cả các yêu cầu khác
-      "dest": "api/index.py" // Chuyển đến file Flask
+      "src": "/(.*)",
+      "dest": "app.js"
     }
   ]
 }
