--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "functions": {
-    "api/**/*.py": {
+    "api/index.py": {
       "includeFiles": "templates/**,static/**,data/**,qlsv.db"
     }
   },
